--- a/WideOpenSite.html
+++ b/WideOpenSite.html
@@ -45,9 +45,12 @@
   <div class="jumbotron">
     <div class="text">
       <p class="digital">YOUR DIGITAL</p>
-      <h1 class = 'workshop'>WORKSHOP</h1>
-      <p>Building Business <span style="color:#FF8322">Solutions</span> & Bright Ideas</p>
+      <p class = 'workshop'>WORKSHOP</p>
+      <p>Building Business <span style="color:#FF8322">Solutions</span> & Bright <span style="color:#B8E233">Ideas</span></p>
+      <button class="learnMore" type="button" name="button">Learn More</button>
     </div>
+
+
   </div>
 
 
