added How Can We Help and started the 2 columns with rows inside

--- a/WideOpenSite.html
+++ b/WideOpenSite.html
@@ -49,13 +49,78 @@
       <p>Building Business <span style="color:#FF8322">Solutions</span> & Bright <span style="color:#B8E233">Ideas</span></p>
       <button class="learnMore" type="button" name="button">Learn More</button>
     </div>
-
-
   </div>
 
 
+<div class="containerTool">
+    <section class="tool">
+    <p>Wide Open Technologies brings enterprise-level technology<br>
+to small and mid-sized companies – building the digital technology that<br>
+solves unique problems, works better and turns ideas into functional reality.</p>
+    <figure class="toolPic">
+      <img src="toolpic.png" alt="">
+    </figure>
+
+<h1 class="twhite">HERE'S HOW IT <strong><span style="color:#B5CE30">WORKS</span></strong></h1>
+    </section>
+  </div>
+
+<section class="col_container3">
+      <div class="sprite">
+        <img src="bulb.png" alt="">
+        <p>Bring Your Business <br>
+Ideas, Problems, Challenges or Dreams to Wide Open.</p>
+
+    <a class="col_Learn3" href="#">Learn About <br>Our Services</a>
+    <div class="link-arrow"></div>
+
+  </div>
+
+      <div class="sprite">
+        <img src="arrow.png" alt="">
+        <p>Wide Open's tight knit team of
+experts becomes your team of
+experts, advising you on the
+most effective, efficient solution.</p>
+
+        <a class="col_Learn3" href="#">Learn About <br>Our Company</a>
+        <div class="link-arrow"></div>
+      </div>
+
+      <div class="sprite">
+          <img class="sprite3" src="power.png" alt="">
+              <p>Wide Open constructs,
+implements and maintains
+your amazing new technology
+and makes your life easier.</p>
+
+      <a class="col_Learn3" href="#">See Some of the <br>Work We Have Done</br></a>
+      <div class="link-arrow"></<d></d>
+  </div>
+</section>
+
+<section class="howHelp">
+    <h1>HOW CAN WE <b><span class="help">HELP?</span></b></h1>
+    <p>Here are just a few of the ways Wide Open can help you and your business</p>
+</section>
 
 
+<section class="container_flex5">
+
+  <div class="Col_flex5">
+
+        <div class="second-a"><p>Repair or modify <br>
+existing software</p></div>
+        <div class="second-b">B</div>
+        <div class="second-c">C</div>
+  </div>
+
+  <div class="Col_flex5 col_FlexSecond">
+    <div class="other-a">A</div>
+    <div class="other-b">B</div>
+  </div>
+
+</section>
 
 
 
