--- a/WideOpenSite.html
+++ b/WideOpenSite.html
@@ -101,27 +101,34 @@ and makes your life easier.</p>
 
 <section class="howHelp">
     <h1>HOW CAN WE <b><span class="help">HELP?</span></b></h1>
-    <p>Here are just a few of the ways Wide Open can help you and your business</p>
+    <p style="font-size: 1.5em">Here are just a few of the ways Wide Open can help you and your business</p>
 </section>
 
+<section class="skills">
+  <div class="flexContainer">
+    <div class="column">
+      <div class="child">
+        Repair or modify <br> existing software
+      </div>
+      <div class="child">
+      Develop a mobile app with real venue potential <br>
+      Make an impact on any device
+      </div>
+      <div class="child">
+        Build functional prototypes for entrepreneurs <br>
+        Have a digital idea? We turn into something you can show investors.
+      </div>
+    </div>
+    <div class="column">
+      <div class="child">
+        Be your multi-talented technology department <br> Rely on us for consistent management and <br> maintenance of the digital side of your business.
+      </div>
+      <div class="child">
+        Make eCommerce work for you and your clients <br> Customized functionality tailored to your business
+      </div>
+    </div>
 
-<section class="container_flex5">
-
-  <div class="Col_flex5">
-
-        <div class="second-a"><p>Repair or modify <br>
-existing software</p></div>
-        <div class="second-b">B</div>
-        <div class="second-c">C</div>
   </div>
-
-  <div class="Col_flex5 col_FlexSecond">
-    <div class="other-a">A</div>
-    <div class="other-b">B</div>
-  </div>
-
-</section>
-
 
 
 
